--- a/Sensorprojekt/Feuchtigkeit.css
+++ b/Sensorprojekt/Feuchtigkeit.css
@@ -1,15 +1,14 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 500px;
+  min-height: 600px;
 }
 
 .u-section-1 .u-layout-wrap-1 {
   margin-top: 60px;
   margin-bottom: 60px;
-  position: relative;
 }
 
 .u-section-1 .u-layout-cell-1 {
-  min-height: 400px;
+  min-height: 480px;
 }
 
 .u-section-1 .u-container-layout-1 {
@@ -18,34 +17,52 @@
 
 .u-section-1 .u-custom-html-1 {
   margin-bottom: 0;
-  margin-top: 0;
+  margin-top: -40px;
 }
 
 .u-section-1 .u-layout-cell-2 {
-  min-height: 400px;
+  min-height: 480px;
 }
 
 .u-section-1 .u-container-layout-2 {
   padding: 30px;
 }
 
+.u-section-1 .u-text-1 {
+  margin: 0;
+}
+
+.u-section-1 .u-image-1 {
+  height: 210px;
+  margin-bottom: 0;
+  margin-top: 30px;
+}
+
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 430px;
+    min-height: 505px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    position: relative;
   }
 
   .u-section-1 .u-layout-cell-1 {
-    min-height: 330px;
+    min-height: 396px;
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 330px;
+    min-height: 396px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 169px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 353px;
+    min-height: 275px;
   }
 
   .u-section-1 .u-layout-cell-1 {
@@ -53,13 +70,17 @@
   }
 
   .u-section-1 .u-layout-cell-2 {
-    min-height: 253px;
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 124px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 860px;
+    min-height: 375px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -67,22 +88,18 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 380px;
-  }
-
   .u-section-1 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
   }
+
+  .u-section-1 .u-image-1 {
+    height: 215px;
+  }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 578px;
-  }
-
-  .u-section-1 .u-layout-cell-2 {
-    min-height: 239px;
+  .u-section-1 .u-image-1 {
+    height: 132px;
   }
 }
