Final Design Modification Videos

--- a/Sensorprojekt/Temperatur.css
+++ b/Sensorprojekt/Temperatur.css
@@ -18,7 +18,7 @@
 .u-section-1 .u-custom-html-1 {
   min-height: 597px;
   width: 719px;
-  margin: -15px 0 0;
+  margin: 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
