--- a/Sensorprojekt/Feuchtigkeit.css
+++ b/Sensorprojekt/Feuchtigkeit.css
@@ -17,7 +17,7 @@
 
 .u-section-1 .u-custom-html-1 {
   margin-bottom: 0;
-  margin-top: -40px;
+  margin-top: 0;
 }
 
 .u-section-1 .u-layout-cell-2 {
