--- a/Sensorprojekt/Test-Cases.css
+++ b/Sensorprojekt/Test-Cases.css
@@ -10,7 +10,6 @@
   min-height: 690px;
   margin-top: 60px;
   margin-bottom: 14px;
-  height: auto;
 }
 
 .u-section-1 .u-tab-link-1 {
@@ -161,6 +160,10 @@
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-tabs-1 {
+    height: auto;
+  }
+
   .u-section-1 .u-text-1 {
     margin-left: 54px;
     margin-right: 54px;
